test/files/neg/t12321/Test_2.scala

package example

import bar.B

object Test {
  def b = new B(1)
}
